--- a/events.html
+++ b/events.html
@@ -62,9 +62,63 @@
                         <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>05/04/2023</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify">
-                            <h2>Páscoa Feliz</h2>
-                            <img class="img-fluid" src="assets/eventos/pascoa.jpg" alt="logo">
+                        <div class="text-justify col-lg-8 mb-3 mb-lg-0">
+                            <h2>Menu Páscoa</h2>
+                            <p>
+                                <br>
+                                Biscoitos (canela) [+100g]
+                                <br>
+                                Biscoitos tipo húngaros [+100g]
+                                <br>
+                                Pão de Deus [500g]
+                                <br>
+                                Leite creme [kg]
+                                <br>
+                                Aletria [kg]
+                                <br>
+                                Tapioca ovos [kg]
+                                <br>
+                                Cocos [kg]
+                                <br>
+                                Trança de maçã e canela [1/2 trança / 1 trança]
+                                <br>
+                                Trança com creme ovos e amêndoa [1/2 trança / 1 trança]
+                                <br>
+                                Trança com coco [1/2 trança / 1 trança]
+                                <br>
+                                Regueifa doce [kg]
+                                <br>
+                                Regueifa doce com coco [kg]
+                                <br>
+                                Pão-de-ló seco [un]
+                                <br>
+                                Pão-de-Ió seco de cacau cru [un]
+                                <br>
+                                Pão-de-Ió semi-húmido à Sabor de Pão [un]
+                                <br>
+                                Pão-de-ló semi-húmido de cacau cru [un]
+                                <br>
+                                Pão-de-Ió húmido de comer à colher [un]
+                                <br>
+                                Rolo com recheio de cacau / creme de ovos [kg]
+                                <br>
+                                Rolo de cacau com recheio de creme de ovos [kg]
+                                <br>
+                                Bolo de cacau cru [kg]
+                                <br>
+                                Bolo de Aconchego de Inverno [kg]
+                                <br>
+                                Bolo de laranja [kg]
+                                <br>
+                                Bolo Oreo [kg]
+                                <br>
+                                Bolo de bolacha com café / cacau [kg]
+                                <br>
+                                Tarte amêndoa/coco/maça [kg]
+                            </p>
+                        </div>
+                        <div class="col-lg-4 col-12 mx-auto">
+                            <img class="img-evnt" src="assets/eventos/pascoa.jpg" alt="logo">
                         </div>
                     </div>
                 </div>
@@ -80,12 +134,12 @@
                         <div class="text-justify col-lg-8 mb-3 mb-lg-0">
                             <h2>Menu Natal</h2>
                             A nossa ementa para que o seu NATAL seja SAUDÁVEL e DELICIOSO !!
-                            Para mais informação ou encomendas, contatar-nos por mensagem privada,  ou WhatsApp para o n.º 91 450 460 7 (custo de uma chamada para rede móvel nacional) 
-                           <br> ˜”*°•.˜”*°• FELIZ NATAL !!!!!! •°*”˜.•°*”˜
+                            Para mais informação ou encomendas, contatar-nos por mensagem privada,  ou WhatsApp para o n.º 91 450 460 7 (custo de uma chamada para rede móvel nacional).
+                           <br>FELIZ NATAL !!!!!
                             <img class="img-fluid" src="assets/eventos/natal.jpg" alt="logo">
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            
+
                             <p><img class="img-fluid" src="assets/eventos/tronco.jpg" alt="logo"></p>
                             <p><img class="img-fluid" src="assets/eventos/rabanadas.jpg" alt="logo"></p>
                             <p><img class="img-fluid" src="assets/eventos/bolorei.jpg" alt="logo"></p>
