--- a/events.html
+++ b/events.html
@@ -63,8 +63,45 @@
                     </div>
                     <div class="row">
                         <div class="text-justify">
-                            <h2>Páscoa Feliz</h2>
-                            <img class="img-fluid" src="assets/eventos/pascoa.jpg" alt="logo">
+                            <h2>Menu Páscoa</h2>
+                            <p>
+                                - Biscoitos (canela) [±100g] <br>
+                                - Biscoitos tipo húngaros [±100g] <br>
+                                - Cocos [kg] <br>
+                            </p>
+                            <p>
+                                - Leite creme [kg] <br>
+                                - Aletria [kg] <br>
+                                - Tapioca ovos [kg] <br>
+                            </p>
+                            <p>
+                                - Trança de maçã e canela [1/2 trança / 1 trança] <br>
+                                - Trança com creme ovos e amêndoa [1/2 trança / 1 trança] <br>
+                                - Trança com coco [1/2 trança / 1 trança] <br>
+                            </p>
+                            <p>
+                                - Pão de Deus [500g] <br>
+                                - Regueifa doce [kg] <br>
+                                - Regueifa doce com coco [kg] <br>
+                            </p>
+                            <p>
+                                - Pão-de-ló seco [un] <br>
+                                - Pão-de-Ió seco de cacau cru [un] <br>
+                                - Pão-de-Ió semi-húmido à Sabor de Pão [un] <br>
+                                - Pão-de-ló semi-húmido de cacau cru [un] <br>
+                                - Pão-de-Ió húmido de comer à colher [un] <br>
+                            </p>
+                                - Rolo com recheio de cacau / creme de ovos [kg] <br>
+                                - Rolo de cacau com recheio de creme de ovos [kg] <br>  
+                        </p>
+                        <p>
+                            - Bolo de cacau cru [kg] <br>
+                                - Bolo de Aconchego de Inverno [kg] <br>
+                                - Bolo de laranja [kg] <br>
+                                - Bolo Oreo [kg] <br>
+                                - Bolo de bolacha com café / cacau [kg] <br>
+                                - Tarte amêndoa/coco/maça [kg]
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -79,33 +116,39 @@
                     <div class="row">
                         <div class="text-justify col-lg-8 mb-3 mb-lg-0">
                             <h2>Menu Natal</h2>
-                           <p>- Pão-de-ló semi-húmido à Sabor de Pão [un]<br>
+                           <p>
+                            - Pão-de-ló semi-húmido à Sabor de Pão [un]<br>
                             - Pão-de-ló semi-húmido de cacau cru [un]<br>
                             - Pão-de-ló húmido de comer à colher [un]<br>
                             </p> 
-                            <p>- Biscoitos tipo húngaros[100 g]<br>
-                                - Cookies Vegan [100 g]<br>
-                                - Biscóbombom [100 g]<br>
+                            <p>
+                            - Biscoitos tipo húngaros [±100g]<br>
+                            - Cookies Vegan [±100g]<br>
+                            - Biscobombom [±100g]<br>
                             </p> 
-                            <p>- Leite creme [kg]<br>
-                                - Aletria [kg]<br>
+                            <p>
+                            - Leite creme [kg]<br>
+                            - Aletria [kg]<br>
                             </p> 
-                            <p>- Rabanadas no forno [kg]<br>
-                                - Tronco de Natal [1/2 tronco / 1 tronco]<br>
-                                - Bolo Rainha só frutos secos [kg]<br>
-                                - Bolo Rei de cacau cru [kg]<br>
-                                - Panetone [un]<br>
+                            <p>
+                            - Rabanadas no forno [kg]<br>
+                            - Tronco de Natal [1/2 tronco / 1 tronco]<br>
+                            - Bolo Rainha só frutos secos [kg]<br>
+                            - Bolo Rei de cacau cru [kg]<br>
+                            - Panetone [un]<br>
                             </p>
-                            <p>- Bolo de cacau cru [kg]<br>
-                                - Bolo "Oreo" (cacau ou ovos) [kg]<br>
-                                - Bolo do bolacha [kg]<br>
+                            <p>
+                            - Bolo de cacau cru [kg]<br>
+                            - Bolo "Oreo" (cacau ou ovos) [kg]<br>
+                            - Bolo do bolacha [kg]<br>
                             </p>
-                            <p>- Croquetes no forno (carnes brancas, vegetais) [un]<br>
-                                - Rissóis no forno (recheios diversos) [un]<br>
-                                - Padinhas de cogumelos [un]<br>
-                                - Broa de milho bacalhau [500g/1kg]<br>
-                                - Pataniscas sem fritar (bacalhau, vegetais) [kg]<br>
-                                - Panados de frango no forno [kg]<br>
+                            <p>
+                            - Croquetes no forno (carnes brancas, vegetais) [un]<br>
+                            - Rissóis no forno (recheios diversos) [un]<br>
+                            - Padinhas de cogumelos [un]<br>
+                            - Broa de milho bacalhau [500g / 1kg]<br>
+                            - Pataniscas sem fritar (bacalhau, vegetais) [kg]<br>
+                            - Panados de frango no forno [kg]
                             </p>
 
                             
