--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
                         <div class="col-4 text-end text-muted mx-3"><i class="fa-solid fa-calendar-days mx-2"></i>05/04/2023</div>
                     </div>
                     <div class="row">
-                        <div class="text-justify">
+                        <div class="text-justify col-lg-8 mb-3 mb-lg-0">
                             <h2>Menu Páscoa</h2>
                             <p>
                                 - Biscoitos (canela) [±100g] <br>
@@ -93,8 +93,8 @@
                             </p>
                                 - Rolo com recheio de cacau / creme de ovos [kg] <br>
                                 - Rolo de cacau com recheio de creme de ovos [kg] <br>  
-                        </p>
-                        <p>
+                            </p>
+                            <p>
                             - Bolo de cacau cru [kg] <br>
                                 - Bolo de Aconchego de Inverno [kg] <br>
                                 - Bolo de laranja [kg] <br>
@@ -102,6 +102,12 @@
                                 - Bolo de bolacha com café / cacau [kg] <br>
                                 - Tarte amêndoa/coco/maça [kg]
                             </p>
+                        </div>
+                        <div class="col-lg-4 col-12 mx-auto">
+                            <p><img class="img-fluid" src="assets/eventos/hungaros.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/eventos/regueifa.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/eventos/paodelocacau.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/eventos/tarteamendoa.jpg" alt="logo"></p>
                         </div>
                     </div>
                 </div>
@@ -149,12 +155,9 @@
                             - Broa de milho bacalhau [500g / 1kg]<br>
                             - Pataniscas sem fritar (bacalhau, vegetais) [kg]<br>
                             - Panados de frango no forno [kg]
-                            </p>
-
-                            
+                            </p>                            
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-
                             <p><img class="img-fluid" src="assets/eventos/tronco.jpg" alt="logo"></p>
                             <p><img class="img-fluid" src="assets/eventos/rabanadas.jpg" alt="logo"></p>
                             <p><img class="img-fluid" src="assets/eventos/bolorei.jpg" alt="logo"></p>
