Improved Readability on #About

--- a/index.html
+++ b/index.html
@@ -70,22 +70,40 @@
                 <h2 class="section-heading text-uppercase mb-4">Sobre Nós</h2>
             </div>
             <div class="row">
-                <div class="text-justify col-md-8 mb-4">
-                   Somos uma botique situada em São João da Madeira, formada em outubro de 2017, com o intuíto de proporcionar aos nossos clientes uma dieta sudável, biológica, sem OGM* e principalmente sem glúten e sem leite.
-                   <br>
-                   Tudo surgiu quando começaram a ser detetadas intolerâncias e alergias ao glúten e leite na nossa família e, junto disso, a necessidade de uma melhor qualidade de produtos. Tivemos de alterar a nossa vida e a nossa alimentação toda e começamos a confecionar bolos e pães em casa. 
-                   O que fazíamos era bom e a quantidade de elogios só aumentava de dia para dia. Com isso crescia também o incentivo para abrirmos um espaço de modo a apresentarmos a mais pessoas o nosso trabalho.
-                   <br>
-                   Desde aí que temos vindo a inovar com novidades regularmente e tentamos atingir o máximo de áreas possíveis na alimentação, para que aos nossos clientes nada falte.
-                   <br>
-                   Hoje já contamos com produtos que vão desde o pão tradicional, até salgados, como pizza, compotas, doces e bolos tradicionais e até mesmo, mais recentemente, uma linha de produtos vegan com queijos, iogurtes, gelados e bebidas vegetais, para proporcionarmos aos  nossos clientes alérgicos ou intolerantes ao leite, a alegria de voltarem a consumir tais produtos sem que lhes provoque qualquer tipo de problema, mantendo o sabor original.
-                   <br>
-                   Para além disso, de modo a melhorar ainda mais a qualidade e sabor dos alimentos que produzimos, utilizamos processos de fabrico tradicionais e não industrializados.
-                   <br>
-                   <br>
-                   *Organismos Geneticamente Modificados
+                <div class="text-justify col-xl-8 mb-4">
+                    <p>
+                        Somos uma botique situada em São João da Madeira, formada em outubro de 2017,
+                        com o intuíto de proporcionar aos nossos clientes uma dieta sudável, biológica,
+                        sem OGM* e principalmente sem glúten e sem leite.
+                    </p>
+                    <p>
+                        Tudo surgiu quando começaram a ser detetadas intolerâncias e alergias ao glúten e
+                        leite na nossa família e, junto disso, a necessidade de uma melhor qualidade de produtos.
+                        Tivemos de alterar a nossa vida e a nossa alimentação toda e começamos a confecionar bolos
+                        e pães em casa. O que fazíamos era bom e a quantidade de elogios só aumentava de dia para dia.
+                        Com isso crescia também o incentivo para abrirmos um espaço de modo a apresentarmos a mais
+                        pessoas o nosso trabalho.
+                    </p>
+                    <p>
+                        Desde aí que temos vindo a inovar com novidades regularmente e tentamos atingir o máximo de áreas
+                        possíveis na alimentação, para que aos nossos clientes nada falte.
+                    </p>
+                   <p>
+                       Hoje já contamos com produtos que vão desde o pão tradicional, até salgados, como pizza,
+                       compotas, doces e bolos tradicionais e até mesmo, mais recentemente, uma linha de produtos
+                       vegan com queijos, iogurtes, gelados e bebidas vegetais, para proporcionarmos aos  nossos
+                       clientes alérgicos ou intolerantes ao leite, a alegria de voltarem a consumir tais produtos
+                       sem que lhes provoque qualquer tipo de problema, mantendo o sabor original.
+                   </p>
+                   <p>
+                       Para além disso, de modo a melhorar ainda mais a qualidade e sabor dos alimentos que produzimos,
+                       utilizamos processos de fabrico tradicionais e não industrializados.
+                   </p>
+                    <div class=" text-end text-muted">
+                        *Organismos Geneticamente Modificados
+                    </div>
                 </div>
-                <div class="col-md-4 col-8 mx-auto">
+                <div class="col-lg-4 col-8 mx-auto">
                     <img class="img-fluid" src="assets/img/logos/logo.png" alt="logo">
                 </div>
 
