--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <h2 class="text-uppercase mb-5">Salgados</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/salgados/1.jpg" alt="salgados"/>
-                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-salgados">Clique aqui para colsultar fotos destes produtos</a></p>
+                                    <p class="col-lg-7 col-sm text-justify">Temos a oferecer pizza, pão de alho, pataniscas sem fritar, croquetes, rissóis ou panados no forno e até mesmo empadas de vegetais ou carnes brancas.<br><br><a class="produtos" href="gallery.html#h-salgados">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
@@ -393,7 +393,7 @@
                                 <h2 class="text-uppercase mb-5">Doces</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/doces/33.jpg" alt="bolos"/>
-                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-doces">Clique aqui para colsultar fotos destes produtos</a></p>
+                                    <p class="col-lg-7 col-sm text-justify">Tentamos agradar o máximo de paladares possíveis, daí que temos uma vasta gama de doces saudáveis. Confecionamos croissantes, bolas de berlim no forno, muffins de cacau, crepes e muitos outros produtos.<br><br><a class="produtos" href="gallery.html#h-doces">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
@@ -414,7 +414,7 @@
                                 <h2 class="text-uppercase mb-5">Biscoitos</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/biscoitos/1.jpg" alt="biscoitos"/>
-                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-biscoitos">Clique aqui para colsultar fotos destes produtos</a></p>
+                                    <p class="col-lg-7 col-sm text-justify">Fazemos biscoitos para todos os gostos, desde húngaros, biscoitos de canela, limão ou baunilha até biscobombons que não vão querer perder.<br><br><a class="produtos" href="gallery.html#h-biscoitos">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
@@ -435,7 +435,7 @@
                                 <h2 class="text-uppercase mb-5">Compotas e manteigas</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/compotas_manteigas/1.jpg" alt="compotas_manteigas"/>
-                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-compotas_manteigas">Clique aqui para colsultar fotos destes produtos</a></p>
+                                    <p class="col-lg-7 col-sm text-justify">Tudo de fabrico caseiro e com o maior cuidado, presamos para que as nossas compotas sejam o mais saborosas possíveis com o mínimo de açúcar e para que todas as manteigas tenham o verdadeiro sabor do fruto original.<br><br><a class="produtos" href="gallery.html#h-compotas_manteigas">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
@@ -456,7 +456,7 @@
                                 <h2 class="text-uppercase mb-5">Laticínios Vegan</h2>
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/veggiecinios/1.jpg" alt="veggiecinios"/>
-                                    <p class="col-lg-7 col-sm text-justify">Desde broa de milho, pão Sabor de Pão, a pão de beterraba e cenoura ou alfarroba, temos tudo o que possa pretender.<br><br><a class="produtos" href="gallery.html#h-veggiecinios">Clique aqui para colsultar fotos destes produtos</a></p>
+                                    <p class="col-lg-7 col-sm text-justify">Nesta gama mais recente, temos a oferecer uma grande variedade em bebidas vegetais, iogurtes de diversos sabores e texturas, gelados de fruta ou tipo magnum e até mesmo os incríveis queijos à base de caju.<br><br><a class="produtos" href="gallery.html#h-veggiecinios">Clique aqui para colsultar fotos destes produtos</a></p>
                                 </div>
                             </div>
                         </div>
