--- a/events.html
+++ b/events.html
@@ -175,7 +175,14 @@
                     <div class="row">
                         <div class="text-justify">
                             <h2>Mudança de Horário</h2>
-                            <img class="img-fluid" src="assets/eventos/horario2.jpg" alt="logo">
+                            ESTA SEMANA 05 DEZ - 10 DEZ <br>
+                            2ª feira - fechado <br>
+                            3ª feira - aberto <br>
+                            4ª feira - aberto <br>
+                            5ª feira - fechado <br>
+                            6ª feira - aberto <br>
+                            sábado - aberto
+                            <p><br><em>Para uma melhor gestão da produção e para evitarmos desperdícios solicitamos que faça encomenda</em></p>
                         </div>
                     </div>
                 </div>
@@ -189,8 +196,14 @@
                     </div>
                     <div class="row">
                         <div class="text-justify">
-                            <h2>Mudança Horário</h2>
-                            <img class="img-fluid" src="assets/eventos/mudanca_horario.jpg" alt="logo">
+                            <h2>Mudança de Horário</h2>
+                            ESTA SEMANA 28 NOV - 03 DEZ <br>
+                            2ª feira - aberto <br>
+                            3ª feira - aberto <br>
+                            4ª feira - fechado <br>
+                            5ª feira - fechado <br>
+                            6ª feira - fechado <br>
+                            sábado - fechado
                         </div>
                     </div>
                 </div>
