--- a/news.html
+++ b/news.html
@@ -50,8 +50,7 @@
         <section class="page-section" id="news">
             <div class="container">
                 <div class="text">
-                    <h2 class="section-heading text-uppercase">Notícias</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase mb-4">Notícias</h2>
                 </div>
                 <div class="row">
                     COLOCAR O CONTEÚDO AQUI!
