--- a/info.html
+++ b/info.html
@@ -33,7 +33,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/events.html">Eventos</a></li>
+                                <li><a class="dropdown-item" href="/info.html">Informações</a></li>
                                 <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
                                 <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
                             </ul>
@@ -46,12 +46,11 @@
             </div>
         </nav>
         <div class="navbar-spacer"></div>
-        <!-- events-->
-        <section class="page-section" id="events">
+        <!-- info-->
+        <section class="page-section" id="info">
             <div class="container">
                 <div class="text">
-                    <h2 class="section-heading text-uppercase">Eventos</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase mb-4">Informações</h2>
                 </div>
                 <div class="blog-item p-md-4 p-3 mb-md-4 mb-3">
                     <div class="row d-flex align-items-center mb-3">
@@ -104,10 +103,10 @@
                             </p>
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            <p><img class="img-fluid" src="assets/eventos/hungaros.jpg" alt="logo"></p>
-                            <p><img class="img-fluid" src="assets/eventos/regueifa.jpg" alt="logo"></p>
-                            <p><img class="img-fluid" src="assets/eventos/paodelocacau.jpg" alt="logo"></p>
-                            <p><img class="img-fluid" src="assets/eventos/tarteamendoa.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/hungaros.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/regueifa.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/paodelocacau.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/tarteamendoa.jpg" alt="logo"></p>
                         </div>
                     </div>
                 </div>
@@ -158,9 +157,9 @@
                             </p>                            
                         </div>
                         <div class="col-lg-4 col-12 mx-auto">
-                            <p><img class="img-fluid" src="assets/eventos/tronco.jpg" alt="logo"></p>
-                            <p><img class="img-fluid" src="assets/eventos/rabanadas.jpg" alt="logo"></p>
-                            <p><img class="img-fluid" src="assets/eventos/bolorei.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/tronco.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/rabanadas.jpg" alt="logo"></p>
+                            <p><img class="img-fluid" src="assets/infos/bolorei.jpg" alt="logo"></p>
                         </div>
                     </div>
                 </div>
