--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star"></i>
                         </div>
                     </div>
                     <div class="text-justify">
@@ -257,7 +257,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star"></i>
                         </div>
                     </div>
                     <div class="text-justify">
