Organization at custom-styles.css

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 </div> 
                 <div class="col-lg-8 mt-5 mt-lg-0">
                     <iframe
-                            class="location-map"
+                            class="h-100 w-100"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3015.466897144939!2d-8.493447124029531!3d40.90550757136499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2381e723ac253d%3A0x1b9574c9e5f39055!2sSabor%20de%20P%C3%A3o!5e0!3m2!1spt-PT!2spt!4v1682361052867!5m2!1spt-PT!2spt"
                             style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
