Minor changes in names

--- a/info.html
+++ b/info.html
@@ -203,6 +203,7 @@
                             5ª feira - fechado <br>
                             6ª feira - fechado <br>
                             sábado - fechado
+                            <p><br><em>Para uma melhor gestão da produção e para evitarmos desperdícios solicitamos que faça encomenda</em></p>
                         </div>
                     </div>
                 </div>
