--- a/orders.html
+++ b/orders.html
@@ -36,7 +36,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/events.html">Eventos</a></li>
+                                <li><a class="dropdown-item" href="/info.html">Informações</a></li>
                                 <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
                                 <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
                             </ul>
