Solved dropdown-menu inside another dropdown-menu problem!

--- a/subpage-template.html
+++ b/subpage-template.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="/index.html#portfolio">Produtos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle">Blog</a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu d-block d-lg-none">
                                 <li><a class="dropdown-item" href="/events.html">Eventos</a></li>
                                 <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
                                 <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
