--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Produtos</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle">Blog</a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu d-block d-lg-none">
                             <li><a class="dropdown-item" href="/info.html">Informações</a></li>
                             <li><a class="dropdown-item" href="/news.html">Notícias</a></li>
                             <li><a class="dropdown-item" href="/gallery.html">Galeria</a></li>
