--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div class="row">
                 <div class="text-justify col-xl-8 mb-4">
                     <p>
-                        Somos uma botique situada em São João da Madeira, formada em outubro de 2017,
-                        com o intuíto de proporcionar aos nossos clientes uma dieta sudável, biológica,
+                        Somos uma boutique situada em São João da Madeira, formada em outubro de 2017,
+                        com o intuito de proporcionar aos nossos clientes uma dieta saudável, biológica,
                         sem OGM* e principalmente sem glúten e sem leite.
                     </p>
                     <p>
@@ -472,8 +472,8 @@
                                 <div class="row">
                                     <img class="img-fluid col-lg-5 col-sm" src="assets/foods/compotas_manteigas/1.jpg" alt="compotas_manteigas"/>
                                     <p class="col-lg-7 col-sm text-justify">
-                                        Tudo de fabrico caseiro e com o maior cuidado, presamos para que as nossas
-                                        compotas sejam o mais saborosas possíveis com o mínimo de açúcar e para que
+                                        Tudo de fabrico caseiro e com o maior cuidado, prezamos para que as nossas
+                                        compotas sejam o mais saborosas possível com o mínimo de açúcar e para que
                                         todas as manteigas tenham o verdadeiro sabor do fruto original.
                                         <br>
                                         <a class="text-muted" href="gallery.html#h-compotas_manteigas">Ver mais fotos</a>
