--- a/news.html
+++ b/news.html
@@ -78,7 +78,8 @@
                         <h2>Mercado de Natal</h2>
                     <div class=" text-justify text-muted mb-3"> 
                         Participação no Veggie Fest em 2019 com direito a uma pequena entrevista na RTP1.
-                        <a href="https://www.rtp.pt/play/p5286/e444848/portugal-em-direto/790467" class="produtos"><br>Consulte aqui a reportagem completa</a>
+                        <br>
+                        <a class="text-muted" href="https://www.rtp.pt/play/p5286/e444848/portugal-em-direto/790467">Consulte aqui a reportagem completa</a>
                     </div>
                     <video class="img-fluid mx-auto d-block col-lg-8"controls>
                         <source src="assets/news/news5.mp4" type="video/mp4">
